--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,31 +1,15 @@
 <div class="container">
   <div class="filters">
-    <a class="button" (click)="filter='Heads'">Heads</a>
-    <a class="button" (click)="filter='Arms'">Arms</a>
-    <a class="button" (click)="filter='Torsos'">Torsos</a>
-    <a class="button" (click)="filter='Bases'">Bases</a>
-    <a class="button" (click)="filter=''">All</a>
+    <a class="button" routerLink="/catalog" [queryParams]="{filter: 'Heads'}" routerLinkActive="active">Heads</a>
+    <a class="button" routerLink="/catalog" [queryParams]="{filter: 'Arms'}" routerLinkActive="active">Arms</a>
+    <a class="button" routerLink="/catalog" [queryParams]="{filter: 'Torsos'}" routerLinkActive="active">Torsos</a>
+    <a class="button" routerLink="/catalog" [queryParams]="{filter: 'Bases'}" routerLinkActive="active">Bases</a>
+    <a class="button" routerLink="/catalog" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">All</a>
   </div>
 
   <ul class="products">
     <li *ngFor="let product of getFilteredProducts()" class="product-item">
-      <div class="product">
-        <div class="product-details">
-          <img [src]="getImageUrl(product)" [alt]="product.name" />
-          <div class="product-info">
-            <div class="name">{{product.name}}</div>
-            <div class="description">{{product.description}}</div>
-            <div class="category">Part Type: {{product.category}}</div>
-          </div>
-        </div>
-        <div class="price">
-          <div *ngIf="product.discount === 0">{{product.price | currency}}</div>
-          <div *ngIf="product.discount > 0" class="discount">
-            {{(product.price * (1 - product.discount)) | currency}}
-          </div>
-          <button class="cta">Buy</button>
-        </div>
-      </div>
+      <bot-product-details [product]="product" (buy)="addToCart(product)"></bot-product-details>
     </li>
   </ul>
 </div>
